[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-properties"
version = "0.1.0"
description = "Modern property-based testing framework for Qiskit quantum circuits"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Laura Bubble", email = "laura@example.com"}
]
keywords = [
    "quantum",
    "testing",
    "qiskit",
    "property-based",
    "assertions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "qiskit>=2.0.0",
    "qiskit-aer>=0.17.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/laurabubble1/quantum-properties"
Repository = "https://github.com/laurabubble1/quantum-properties.git"
Issues = "https://github.com/laurabubble1/quantum-properties/issues"

[tool.setuptools]
packages = ["quantum_properties"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
